--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
 
         <h2>Development and Programming Projects</h2>
         <p>
-            I have worked on multiple projects both personal and related to university. You can check out my
-            <a href="https://github.com/carlosjtacon" target="_blank">personal GitHub page</a> where some projects' source code 
-            is available for free. 
+            I have worked on multiple projects both personal and related to university studies. You can check out my
+            <a href="https://github.com/carlosjtacon" target="_blank">personal GitHub page</a> where the source code of
+            some projects is available for free. 
         </p>
 
         <p>Some featured projects:</p>
         <ul>
             <li>
-                <b>Morfilms:</b> I made this app to keep track of films I wanted to watch when released in theaters. 
+                <b>Morfilms:</b> I made this app to keep track of films I wanted to watch when they got released in theaters. 
                 I ended up publishing it in <a href="https://play.google.com/store/apps/details?id=eu.morfilms.watchlist" target="_blank">Android - Google Play</a> and 
                 <a href="https://itunes.apple.com/us/app/morfilms-upcoming-movies-list/id1207671266?ls=1&mt=8" target="_blank">iOS - App Store.</a>
                 Source code can be accessed <a href="https://github.com/carlosjtacon/morfilms" target="_blank">in this repo.</a> 
@@ -89,13 +89,13 @@
             <img src="https://raw.githubusercontent.com/carlosjtacon/morfilms/master/screenshots/person_details.png" width="24%">
             <li>
                 <b>Showtimes API:</b> Before making morfilms I was already interested on ways to handle cinema and movies related data in order to make mobile apps. 
-                I made an API to store and offer showtimes info by city, location services for cinemas and also information about movies, getting information from various providers. 
-                It's deprecated now, but still <a href="https://github.com/carlosjtacon/showtimes-api" target="_blank">available.</a> Made with Java/Spring.
+                I made an API to store and offer showtimes info by city, location services for cinemas and information about movies, getting information from various providers. 
+                It's deprecated now, but its <a href="https://github.com/carlosjtacon/showtimes-api" target="_blank">source code is still available.</a> Made with Java/Spring.
             </li>
             <li>
-                <b>University Projects:</b> I also have university activities and projects published, some of them are interesting, for example I developed 
-                <a href="https://github.com/carlosjtacon/uni-algorithms-study" target="_blank">some known algorithms in python</a> to learn new ways of solving
-                problems by programming: divide and conquer, dynamic programming and backtracking.
+                <b>University Projects:</b> I also have published university activities and projects, some of them are interesting for you to check out my programming skills. For example I developed 
+                <a href="https://github.com/carlosjtacon/uni-algorithm-design-paradigms" target="_blank">some known algorithms in python</a> to learn new algorithm design paradigms:
+                divide and conquer, greedy algorithms, dynamic programming and backtracking.
             </li>
         </ul>
 
