--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
             You can access both executable and source code <a href="https://github.com/carlosjtacon/unreal-lecorbusier-plugin" target="_blank">for free at GitHub</a>. 
         </p>
 
-        <img src="https://github.com/carlosjtacon/unreal-lecorbusier-plugin/raw/master/Docs/environments/cementerio.png" width="48%">
-        <img src="https://github.com/carlosjtacon/unreal-lecorbusier-plugin/raw/master/Docs/environments/residencial.png" width="48%">
-
+        <img src="https://github.com/carlosjtacon/unreal-lecorbusier-plugin/raw/master/Docs/environments/cementerio.png" width="49%">
+        <img src="https://github.com/carlosjtacon/unreal-lecorbusier-plugin/raw/master/Docs/environments/residencial.png" width="49%">
+        <video width="99%" controls><source src="https://github.com/carlosjtacon/unreal-lecorbusier-plugin/raw/master/Docs/demo.mp4" type="video/mp4"></video>
+          
 
     </div>
 </body>
